<?xml version="1.0"?>
<package format="3">
  <name>dalco_simulation</name>
  <version>0.0.0</version>
  <description>Simulation package for Dalco robots using Stage</description>
  <maintainer email="dalco-ros2-lap@todo.todo">dalco-ros2-lap</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>stage_ros2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Lint/test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
